2000-02-04  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (kdestroy): Fix to build under Unix again.

2000-02-04  Danilo Almeida  <dalmeida@mit.edu>

	* kdestroy.c: Major revamp to support Kerberos 4 compatibility.  Code
	restructured to allow changes to support Kerberos 4 or Kerberos 5
	only operation depending on whether dynamic libraries are
	avialable.  Explicit documentation and support files to make it
	easy to do this will be forthcoming.

1999-12-03  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Windows fix for 10/26/99 cleanup.

1999-10-26  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup. [from wsanchez@apple.com]

1999-08-09  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Use standard windows exe link flags.

Mon May 10 15:09:31 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Do win32 build in subdir.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* kdestroy.c (main): POSIX states that getopt returns -1 when it
		is done parsing options, not EOF.

Wed Feb 18 15:40:31 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.  Fix up extraneous whitespace.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Wed Jan 21 15:12:30 1998  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kdestroy.c (main): returns int, not void. ANSI X3.159-1989
	2.1.2.2.1 says so, and gcc now warns about it.

Sat Feb 15 12:25:00 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Link in ComErr library $(CLIB)
